# batcherless

./: Core_idea.txt  LICENSE  cabal.project  fix-cabal-fmt.sh  fix-fourmolu.sh  flake.nix  generate.sh
nix/: outputs.nix  project.nix  shell.nix
src/offchain/: batcherless.cabal
src/offchain/lib/Batcherless/: Offchain.hs
src/offchain/lib/Batcherless/Offchain/: Blueprint.hs
src/onchain/validators/: aiken.toml
