cabal-version: 3.4
name:          batcherless
version:       0.1.0.0
synopsis:      On-chain code for regulated stablecoin proof-of-concept
license:       Apache-2.0
license-files: LICENSE
maintainer:    j-mueller@users.noreply.github.com
author:        Djed team @ IOG
homepage:      https://github.com/input-output-hk/wsc-poc
bug-reports:   https://github.com/input-output-hk/wsc-poc
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/wst-poc>

common lang
  default-language:   Haskell2010
  hs-source-dirs:     lib
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules: Batcherless.Offchain
  build-depends:
    , aeson
    , base                   >=4.14 && <4.20
    , cardano-api
    , convex-base
    , convex-blockfrost
    , convex-coin-selection
